--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "prettier-plugin-tailwind",
+	"name": "prettier-plugin-sort-class-names",
 	"version": "2.2.8",
-	"description": "Sort tailwind classes",
-	"author": "Ari Seyhun <ariseyhun@live.com.au>",
-	"homepage": "https://github.com/Acidic9/prettier-plugin-tailwind#readme",
+	"description": "Sort classes with prettier",
+	"author": "Putzi San <putzisan@putzisan.de>",
+	"homepage": "https://github.com/PutziSan/prettier-plugin-sort-class-names",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/Acidic9/prettier-plugin-tailwind.git"
+		"url": "https://github.com/PutziSan/prettier-plugin-sort-class-names.git"
 	},
 	"keywords": [
 		"prettier",
@@ -15,23 +15,19 @@
 		"sort",
 		"order"
 	],
-	"main": "prettier-plugin-tailwind.js",
+	"main": "prettier-plugin-sort-class-names.js",
 	"license": "MIT",
 	"private": false,
 	"scripts": {
 		"build": "rimraf ./lib && tsc"
 	},
-	"dependencies": {
-		"prettier": "^2.1.2",
-		"tailwind-classes-sorter": "^0.2.5",
-		"tailwindcss": "^1.8.13"
-	},
 	"devDependencies": {
 		"@types/node": "^14.14.8",
+		"prettier": "^2.1.2",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.0.5"
 	},
 	"peerDependencies": {
-		"prettier": "^2.0.0"
+		"prettier": "2.x"
 	}
 }
