--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
-	"compilerOptions": {
-		"target": "es6",
-		"strict": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"declaration": true,
-		"module": "commonjs",
-		"outDir": "lib",
-		"moduleResolution": "node",
-		"noImplicitAny": false
-	},
-	"lib": ["es2015"],
-	"include": ["src"]
+  "compilerOptions": {
+    "target": "es6",
+    "strict": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "declaration": true,
+    "module": "commonjs",
+    "outDir": "lib",
+    "moduleResolution": "node",
+    "noImplicitAny": false,
+    "lib": ["ESNext"]
+  },
+  "include": ["src"]
 }
