--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
 	"license": "MIT",
 	"private": false,
 	"scripts": {
-		"build": "rimraf ./lib && tsc"
+		"build": "rimraf ./lib && tsc",
+		"test": "node test.js"
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.8",
-		"prettier": "^2.1.2",
+		"prettier": "^3.0.0",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.0.5"
 	},
